# quarto-coursegen

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: artifacts.html  configuration.html  course-yaml.html  i18n.html  index.html  installation.html  python-api.html  rendering.html  search.json  templates.html  workflow.html
docs/commands/: generate.html  init.html
docs/site_libs/bootstrap/: bootstrap-201b2add8695f569d26c246ec130154e.min.css
docs_src/: _quarto.yml  artifacts.qmd  configuration.qmd  course-yaml.qmd  i18n.qmd  index.qmd  installation.qmd  python-api.qmd  rendering.qmd  templates.qmd  workflow.qmd
docs_src/commands/: generate.qmd  init.qmd
src/quarto_coursegen/: __init__.py  cli.py  config.py  core.py  env.py  generators.py  initializer.py  writer.py
src/quarto_coursegen/lang/: de.yaml
src/quarto_coursegen/package_data/: .gitignore  Makefile  course.yaml
src/quarto_coursegen/package_data/lang/: de.yaml  en.yaml
src/quarto_coursegen/package_data/skeleton/: .gitignore  course.yaml
src/quarto_coursegen/package_data/skeleton/styles/: custom.scss  slides.scss
src/quarto_coursegen/package_data/templates/: _quarto.yml.j2  assignment.qmd.j2  assignments-project.yml.j2  default_template.qmd.j2  handout.qmd.j2  handouts-project.yml.j2  index.qmd.j2  module.qmd.j2  notes.qmd.j2  slides-project.yml.j2  slides.qmd.j2  syllabus.qmd.j2
src/quarto_coursegen/templates/: _quarto-nav.yml.j2  _quarto.yml.j2  assignment.qmd.j2  default_template.qmd.j2  index.qmd.j2  slides-project.yml.j2  slides.qmd.j2  syllabus.qmd.j2
tests/: test_generate.py
